--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -1996,14 +1996,29 @@
     "\n",
     "for name in f_name[:10]:#stopping after the first 10, because we would have 100+ charts\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"LB\"], color = \"red\", marker = \"X\", linestyle = \"--\", label = \"FHR\")\n",
-    "    ax.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"ASTV\"], color = \"blue\", marker = \"o\", linestyle = \"--\", label = \"ASTV\")\n",
-    "    ax.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"ALTV\"], color = \"magenta\", marker = \"d\", linestyle = \"--\", label = \"ALTV\")\n",
+    "    ax.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"LB\"], \n",
+    "    color = \"red\", marker = \"X\", linestyle = \"--\", label = \"FHR\")\n",
+    "\n",
+    "    ax.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"ASTV\"], \n",
+    "    color = \"blue\", marker = \"o\", linestyle = \"--\", label = \"ASTV\")\n",
+    "\n",
+    "    ax.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"ALTV\"], \n",
+    "    color = \"magenta\", marker = \"d\", linestyle = \"--\", label = \"ALTV\")\n",
+    "\n",
     "    ax2 = ax.twinx()\n",
-    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"AC\"], color = \"black\", marker = \"v\", label = \"AC\")\n",
-    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"DS\"], color = \"green\",  marker = \"s\", label = \"DS\")\n",
-    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"DP\"], color = \"cyan\", marker = \"1\", label = \"DP\")\n",
-    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"NSP\"], color = \"purple\", label = \"NSP\")\n",
+    "\n",
+    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"AC\"], \n",
+    "    color = \"black\", marker = \"v\", label = \"AC\")\n",
+    "\n",
+    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"DS\"], \n",
+    "    color = \"green\",  marker = \"s\", label = \"DS\")\n",
+    "\n",
+    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"DP\"], \n",
+    "    color = \"cyan\", marker = \"1\", label = \"DP\")\n",
+    "\n",
+    "    ax2.plot(df[df[\"FileName\"] == name][\"SegFile\"], df[df[\"FileName\"] == name][\"NSP\"], \n",
+    "    color = \"purple\", label = \"NSP\")\n",
+    "    \n",
     "    value = []\n",
     "    for ind, item in enumerate(df[df[\"FileName\"] == name][\"SegFile\"]):\n",
     "        value.append(ind+1)\n",
@@ -2037,7 +2052,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns=['ALTV', 'ASTV', 'DP', 'DS', 'AC', 'NSP', 'LB']"
+    "columns=['ALTV', 'ASTV', 'DP', 'DS', 'AC', 'NSP', 'LB']#variables choice will be discussed"
    ]
   },
   {
@@ -2250,9 +2265,11 @@
    "source": [
     "lr=LogisticRegression(class_weight=\"balanced\", n_jobs=N_JOBS)\n",
     "\n",
-    "parameters = {'C': stats.loguniform(1e0, 1e1), 'max_iter': [500, 1000], \"class_weight\":[None,\"balanced\"]}\n",
+    "parameters = {'C': stats.loguniform(1e0, 1e1), 'max_iter': [500, 1000], \n",
+    "\"class_weight\":[None,\"balanced\"]}\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=lr, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE, scoring=\"accuracy\")\n",
+    "rs=RandomizedSearchCV(estimator=lr, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE, scoring=\"accuracy\")\n",
     "\n",
     "rs.fit(X_train_std,y_train)"
    ]
@@ -2546,7 +2563,8 @@
     "\n",
     "parameters = {\"n_neighbors\": range(1,len(X)+1)}\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=knn, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE,scoring=\"accuracy\")\n",
+    "rs=RandomizedSearchCV(estimator=knn, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE,scoring=\"accuracy\")\n",
     "\n",
     "rs.fit(X_train_std,y_train)"
    ]
@@ -2839,10 +2857,11 @@
    "source": [
     "dtc=DecisionTreeClassifier(class_weight=\"balanced\", random_state=RANDOM_STATE)\n",
     "\n",
-    "parameters = {'criterion':['gini','entropy'], 'max_depth': range(1,100,2), \"max_features\": range(1,len(columns)+1,1), \n",
-    "              'class_weight':[None,'balanced']}\n",
+    "parameters = {'criterion':['gini','entropy'], 'max_depth': range(1,100,2), \n",
+    "\"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=dtc, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE, scoring=\"accuracy\")\n",
+    "rs=RandomizedSearchCV(estimator=dtc, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE, scoring=\"accuracy\")\n",
     "\n",
     "rs.fit(X_train,y_train)"
    ]
@@ -2964,7 +2983,8 @@
    ],
    "source": [
     "dtc=DecisionTreeClassifier(**best_params_dtc, random_state=RANDOM_STATE)\n",
-    "dtc.fit(X=X_train, y=y_train)#using not standardised data given that trees are not touched by the scaleand magnitude of data"
+    "dtc.fit(X=X_train, y=y_train)\n",
+    "#using not standardised data given that trees are not touched by the scale and magnitude of data"
    ]
   },
   {
@@ -3040,7 +3060,8 @@
    ],
    "source": [
     "plt.figure(figsize=(17,17))\n",
-    "plot_tree(decision_tree=dtc, max_depth=3, filled=True, feature_names=df_models.drop(columns=['NSP']).columns,fontsize=10)\n",
+    "plot_tree(decision_tree=dtc, max_depth=3, filled=True, \n",
+    "feature_names=df_models.drop(columns=['NSP']).columns,fontsize=10)\n",
     "plt.tight_layout()\n",
     "plt.savefig('Materiale_powerpoint/tree.png')\n",
     "plt.show()"
@@ -3220,10 +3241,11 @@
    "source": [
     "rfc=RandomForestClassifier(class_weight=\"balanced\", random_state=RANDOM_STATE,n_jobs=N_JOBS)\n",
     "\n",
-    "parameters = {'n_estimators':range(0,151,1), 'criterion':['gini','entropy'], 'max_depth': range(1,100,2), \n",
-    "              \"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
+    "parameters = {'n_estimators':range(0,151,1), 'criterion':['gini','entropy'], \n",
+    "'max_depth': range(1,100,2), \"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=rfc, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE,scoring=\"accuracy\")\n",
+    "rs=RandomizedSearchCV(estimator=rfc, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE,scoring=\"accuracy\")\n",
     "\n",
     "rs.fit(X_train,y_train)"
    ]
@@ -3310,7 +3332,7 @@
     }
    ],
    "source": [
-    "rs.best_score_#better than LogisticRegression, KNN and DecisionTree"
+    "rs.best_score_"
    ]
   },
   {
@@ -3346,7 +3368,8 @@
    ],
    "source": [
     "rfc=RandomForestClassifier(**best_params_rfc, random_state=RANDOM_STATE, n_jobs=N_JOBS)\n",
-    "rfc.fit(X=X_train,y=y_train)#using not standardised data given that trees are not touched by the scaleand magnitude of data"
+    "rfc.fit(X=X_train,y=y_train)\n",
+    "#using not standardised data given that trees are not touched by the scaleand magnitude of data"
    ]
   },
   {
@@ -3546,9 +3569,11 @@
    "source": [
     "abc=AdaBoostClassifier(random_state=RANDOM_STATE)\n",
     "\n",
-    "parameters={'n_estimators':range(0,101,1), 'learning_rate':range(0,11,1),'algorithm':['SAMME','SAMME.R']}\n",
+    "parameters={'n_estimators':range(0,101,1), \n",
+    "'learning_rate':range(0,11,1),'algorithm':['SAMME','SAMME.R']}\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=abc, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
+    "rs=RandomizedSearchCV(estimator=abc, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
     "\n",
     "rs.fit(X_train,y_train)"
    ]
@@ -3844,7 +3869,8 @@
     "parameters={'C':range(0,10,1), 'kernel':['linear', 'poly', 'rbf', 'sigmoid'],\n",
     "            'degree':range(0,11,1), 'gamma':['scale', 'auto'], 'class_weight':[None,'balanced']}\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=sv, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
+    "rs=RandomizedSearchCV(estimator=sv, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
     "\n",
     "rs.fit(X_train_std,y_train)"
    ]
@@ -4124,9 +4150,11 @@
    "source": [
     "clf=BaggingClassifier(base_estimator=DecisionTreeClassifier(), n_jobs=N_JOBS, random_state=RANDOM_STATE)\n",
     "\n",
-    "parameters={'n_estimators':range(1,21,1), 'max_samples':range(1,11,1), 'max_features':range(1,11,1) }\n",
+    "parameters={'n_estimators':range(1,21,1), \n",
+    "'max_samples':range(1,11,1), 'max_features':range(1,11,1) }\n",
     "\n",
-    "rs=RandomizedSearchCV(estimator=clf, param_distributions=parameters, cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
+    "rs=RandomizedSearchCV(estimator=clf, param_distributions=parameters, \n",
+    "cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
     "\n",
     "rs.fit(X_train,y_train)"
    ]
@@ -4547,14 +4575,6 @@
    "source": [
     "joblib.dump(value=pipe_model, filename=\"models/data_challenge_FHR_best_model.joblib\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bce8a2d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
