--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -1883,6 +1883,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "266dfd0d",
+   "metadata": {},
+   "source": [
+    "**Showing the interactions between the variables, to help the variable selection**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 149,
    "id": "fd6a0b5e",
@@ -4593,7 +4602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
