last change for pdf saving

--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -42,7 +42,6 @@
     "from sklearn.ensemble import BaggingClassifier\n",
     "\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -1663,7 +1662,8 @@
     }
    ],
    "source": [
-    "df=df.drop([\"Date\", \"b\", \"e\", \"LBE\", \"DR\", \"A\", \"B\", \"C\", \"D\", \"E\", \"AD\", \"DE\", \"LD\", \"FS\", \"SUSP\"], axis = 1)\n",
+    "df=df.drop([\"Date\", \"b\", \"e\", \"LBE\", \"DR\", \"A\", \"B\", \"C\", \"D\", \n",
+    "\"E\", \"AD\", \"DE\", \"LD\", \"FS\", \"SUSP\"], axis = 1)\n",
     "df.columns"
    ]
   },
@@ -2128,7 +2128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,X_test,y_train,y_test= train_test_split(X,y, test_size=0.2, random_state=RANDOM_STATE, stratify=y)"
+    "X_train,X_test,y_train,y_test= train_test_split(X,y, test_size=0.2, \n",
+    "    random_state=RANDOM_STATE, stratify=y)"
    ]
   },
   {
@@ -2171,7 +2172,8 @@
     }
    ],
    "source": [
-    "pd.Series(y_oversample_train).value_counts().plot(kind='bar', title='Class distribution after appying SMOTE', xlabel='NSP')\n",
+    "pd.Series(y_oversample_train).value_counts().plot(kind='bar', \n",
+    "    title='Class distribution after appying SMOTE', xlabel='NSP')\n",
     "plt.savefig('Materiale_powerpoint/NSP_upsample.png')\n",
     "plt.show()"
    ]
@@ -2443,7 +2445,8 @@
     }
    ],
    "source": [
-    "lr_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "lr_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(lr_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
@@ -2730,7 +2733,8 @@
     }
    ],
    "source": [
-    "knn_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "knn_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(knn_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
@@ -2863,7 +2867,7 @@
     "dtc=DecisionTreeClassifier(class_weight=\"balanced\", random_state=RANDOM_STATE)\n",
     "\n",
     "parameters = {'criterion':['gini','entropy'], 'max_depth': range(1,100,2), \n",
-    "\"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
+    "    \"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
     "\n",
     "rs=RandomizedSearchCV(estimator=dtc, param_distributions=parameters, \n",
     "cv=skfold, random_state=RANDOM_STATE, scoring=\"accuracy\")\n",
@@ -2952,7 +2956,7 @@
     }
    ],
    "source": [
-    "rs.best_score_#better than LogisticRegression and KNN"
+    "rs.best_score_"
    ]
   },
   {
@@ -2989,7 +2993,8 @@
    "source": [
     "dtc=DecisionTreeClassifier(**best_params_dtc, random_state=RANDOM_STATE)\n",
     "dtc.fit(X=X_train, y=y_train)\n",
-    "#using not standardised data given that trees are not touched by the scale and magnitude of data"
+    "#using not standardised data given that \n",
+    "#trees are not touched by the scale and magnitude of data"
    ]
   },
   {
@@ -3032,8 +3037,11 @@
    "source": [
     "feature_importances = dtc.feature_importances_\n",
     "feature_importances = 100 * (feature_importances/feature_importances.max())\n",
-    "series = pd.Series(data=feature_importances, index=df_models.drop(columns=['NSP']).columns).sort_values()\n",
-    "series.plot(kind=\"barh\", figsize=(15, 15), title=f\"Feature importances\", legend=None)\n",
+    "series = pd.Series(data=feature_importances, \n",
+    "    index=df_models.drop(columns=['NSP']).columns).sort_values()\n",
+    "\n",
+    "series.plot(kind=\"barh\", figsize=(15, 15), \n",
+    "    title=f\"Feature importances\", legend=None)\n",
     "plt.savefig('Materiale_powerpoint/feature_importance_plot_dtc.png')\n",
     "plt.show()"
    ]
@@ -3108,7 +3116,8 @@
     }
    ],
    "source": [
-    "dtc_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "dtc_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "    target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(dtc_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
@@ -3244,7 +3253,8 @@
     "rfc=RandomForestClassifier(class_weight=\"balanced\", random_state=RANDOM_STATE,n_jobs=N_JOBS)\n",
     "\n",
     "parameters = {'n_estimators':range(0,151,1), 'criterion':['gini','entropy'], \n",
-    "'max_depth': range(1,100,2), \"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
+    "    'max_depth': range(1,100,2),\n",
+    "    \"max_features\": range(1,len(columns)+1,1), 'class_weight':[None,'balanced']}\n",
     "\n",
     "rs=RandomizedSearchCV(estimator=rfc, param_distributions=parameters, \n",
     "cv=skfold, random_state=RANDOM_STATE,scoring=\"accuracy\")\n",
@@ -3371,7 +3381,8 @@
    "source": [
     "rfc=RandomForestClassifier(**best_params_rfc, random_state=RANDOM_STATE, n_jobs=N_JOBS)\n",
     "rfc.fit(X=X_train,y=y_train)\n",
-    "#using not standardised data given that trees are not touched by the scaleand magnitude of data"
+    "#using not standardised data given that \n",
+    "#trees are not touched by the scale and magnitude of data"
    ]
   },
   {
@@ -3412,7 +3423,8 @@
     }
    ],
    "source": [
-    "rfc_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "rfc_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "    target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(rfc_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
@@ -3726,7 +3738,8 @@
     }
    ],
    "source": [
-    "abc_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "abc_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "    target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(abc_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
@@ -3866,7 +3879,8 @@
     "sv=SVC(random_state=RANDOM_STATE, class_weight='balanced',decision_function_shape='ovo')\n",
     "\n",
     "parameters={'C':range(0,10,1), 'kernel':['linear', 'poly', 'rbf', 'sigmoid'],\n",
-    "            'degree':range(0,11,1), 'gamma':['scale', 'auto'], 'class_weight':[None,'balanced']}\n",
+    "            'degree':range(0,11,1), \n",
+    "            'gamma':['scale', 'auto'], 'class_weight':[None,'balanced']}\n",
     "\n",
     "rs=RandomizedSearchCV(estimator=sv, param_distributions=parameters, \n",
     "cv=skfold, random_state=RANDOM_STATE, scoring='accuracy')\n",
@@ -4019,7 +4033,8 @@
     }
    ],
    "source": [
-    "sv_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "sv_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "    target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(sv_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
@@ -4145,7 +4160,8 @@
     }
    ],
    "source": [
-    "clf=BaggingClassifier(base_estimator=DecisionTreeClassifier(), n_jobs=N_JOBS, random_state=RANDOM_STATE)\n",
+    "clf=BaggingClassifier(base_estimator=DecisionTreeClassifier(), \n",
+    "    n_jobs=N_JOBS, random_state=RANDOM_STATE)\n",
     "\n",
     "parameters={'n_estimators':range(1,21,1), \n",
     "'max_samples':range(1,11,1), 'max_features':range(1,11,1) }\n",
@@ -4309,7 +4325,8 @@
     }
    ],
    "source": [
-    "bag_performances=classification_report(y_true=y_test, y_pred=y_pred, target_names=target_names, output_dict=True)\n",
+    "bag_performances=classification_report(y_true=y_test, y_pred=y_pred, \n",
+    "    target_names=target_names, output_dict=True)\n",
     "# .iloc[:-1, :] to exclude support\n",
     "sns.heatmap(pd.DataFrame(bag_performances).iloc[:-1, :].T, annot=True)\n",
     "plt.tight_layout()\n",
