--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "654cdcb2",
+   "metadata": {},
+   "source": [
+    "# ENI Data Challenge"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "217e382c",
+   "metadata": {},
+   "source": [
+    "<img src=\"Materiale_powerpoint/1200px-ENI_logo.svg.png\" alt=\"Logo ENI\">"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "eed4d26f",
    "metadata": {},
    "source": [
-    "# Classification problem"
+    "# CTG Classification problem"
    ]
   },
   {
