--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -14,7 +14,7 @@
    "id": "217e382c",
    "metadata": {},
    "source": [
-    "<img src=\"Materiale_powerpoint/1200px-ENI_logo.svg.png\" alt=\"Logo ENI\">"
+    "<img src=\"images/1200px-ENI_logo.svg.png\" alt=\"Logo ENI\">"
    ]
   },
   {
@@ -24,6 +24,15 @@
    "metadata": {},
    "source": [
     "# CTG Classification problem"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e0ed7d61",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/Cardiotocography.jpg\" alt=\"cardiotocograph\">"
    ]
   },
   {
