added link to Github Repository

--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -4614,6 +4614,25 @@
    "source": [
     "joblib.dump(value=pipe_model, filename=\"models/data_challenge_FHR_best_model.joblib\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4a6ddfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "11cb332a",
+   "metadata": {},
+   "source": [
+    "# Github Repository\n",
+    "\n",
+    "If you want to go to the repository page, click **<a href='https://github.com/ginoferretti/data_challenge_eni'>here</a>**"
+   ]
   }
  ],
  "metadata": {
