updated links for GitHub

--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -4631,7 +4631,9 @@
    "source": [
     "# Github Repository\n",
     "\n",
-    "If you want to go to the repository page, click **<a href='https://github.com/ginoferretti/data_challenge_eni'>here</a>**"
+    "If you want to go to the repository page, click **<a href='https://github.com/ginoferretti/data_challenge_eni'>here</a>**\n",
+    "\n",
+    "Extended link (if the one above does not work): https://github.com/ginoferretti/data_challenge_eni"
    ]
   }
  ],
