updating markdown in the notebook

--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -1695,11 +1695,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "14eeb36d",
    "metadata": {},
    "source": [
-    "**Correlation matrix without histogram measures**"
+    "**Correlation matrix for all the variables**"
    ]
   },
   {
@@ -1783,11 +1784,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a879010f",
    "metadata": {},
    "source": [
-    "**Choosing the least amount of variables to work with with our models thanks to their correlation with the target NSP**"
+    "**Choosing the least amount of variables to work with our models thanks to their correlation with the target NSP**"
    ]
   },
   {
@@ -1831,11 +1833,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bc907592",
    "metadata": {},
    "source": [
-    "Given the results above, We will start working with at least **ALTV, ASTV, DP** and the **target NSP**. **Given that they are pretty much all categorical, LB will be added.**"
+    "Given the results above, We will start working with at least **ALTV, ASTV, DP** and the **target NSP**."
    ]
   },
   {
@@ -2236,11 +2239,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ebdf03d",
    "metadata": {},
    "source": [
-    "Creating the **stratified kfold** to use on the models. **Using a stratified sampling method helps with unbalaced classes.**"
+    "Creating the **stratified kfold** to use on the models. **Using a stratified sampling method helps with unbalanced classes.**"
    ]
   },
   {
@@ -3108,11 +3112,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8246a4f5",
    "metadata": {},
    "source": [
-    "As We can see, **LD is the variable that splits better by  entropy**"
+    "As We can see, **ASTV is the variable that splits better by  entropy**"
    ]
   },
   {
@@ -3775,11 +3780,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c0d3ac0",
    "metadata": {},
    "source": [
-    "As We can see,  **the Ada Boost has similar performances to the KNN, with an equal accuracy of 81% and similar recalls**."
+    "As We can see,  **the Ada Boost has similar performances to the KNN, with an higher accuracy of 85% and similar recalls**."
    ]
   },
   {
@@ -4070,11 +4076,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "43ac515b",
    "metadata": {},
    "source": [
-    "**The SVM does is the second best in terms of accuracy, with an 87%, behind the RandomForest, and the recall scores are worse only than the ones of the RandomForest classifier**."
+    "**The SVM is the second best in terms of accuracy, with an 87%, behind the RandomForest, and the recall scores are worse than the ones of the AdaBoost and KNN**."
    ]
   },
   {
@@ -4362,11 +4369,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51f6264c",
    "metadata": {},
    "source": [
-    "The **bagged trees are the worse perfoming ones, with the lowest scores seen in the model section so far.**"
+    "The **bagged trees is the worst perfoming ones, with the lowest scores seen in the model section so far.**"
    ]
   },
   {
@@ -4511,6 +4519,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "03f2fb64",
+   "metadata": {},
+   "source": [
+    "Plotting the accuracy scores for each model side by side"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 405,
    "id": "0ef3edb2",
@@ -4546,11 +4563,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bfd663ea",
    "metadata": {},
    "source": [
-    "Given the results above , comparing the various metrics, the best performing overall was the RandomForest, followed by the SVM"
+    "Given the results above , comparing the various metrics, the best performing overall was the **RandomForest**"
    ]
   },
   {
@@ -4653,7 +4671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
