--- a/data_challenge_eni.ipynb
+++ b/data_challenge_eni.ipynb
@@ -4361,7 +4361,8 @@
     }
    ],
    "source": [
-    "clf=BaggingClassifier(**best_params_bag,base_estimator=DecisionTreeClassifier(),n_jobs=N_JOBS, random_state=RANDOM_STATE)\n",
+    "clf=BaggingClassifier(**best_params_bag,base_estimator=DecisionTreeClassifier(),\n",
+    "n_jobs=N_JOBS, random_state=RANDOM_STATE)\n",
     "clf.fit(X=X_train,y=y_train)"
    ]
   },
@@ -4716,7 +4717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
